# DeathStarBench2

./: .gitignore
mediaMicroservices/: .env.template  Dockerfile  docker-compose.yml
mediaMicroservices/nginx-web-server/conf/: nginx.conf
mediaMicroservices/nginx-web-server/lua-scripts/wrk2-api/movie/: register.lua
mediaMicroservices/nginx-web-server/lua-scripts/wrk2-api/movie-info/: read.lua  write.lua
mediaMicroservices/src/MovieIdService/: CMakeLists.txt  MovieIdHandler.h  MovieIdService.cpp
